    zlib to work directly with compressed databases. Passing this to
    configure makes the game act like pre p8 ones. [SW]
  * member() now ignores ANSI in matches. Reported by Minion. [MG]
  * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]
  * hidden() now works on descriptors as advertised. Reported by Teal. [MG]

Version 1.8.3 patchlevel 9                      Feb 28, 2009

Fixes:
 * Starting up without an existing database was broken in p8.
   Reported by many people. [SW]
 * p8 didn't compile for many people for a number of reasons.
   [SW]
 * match() was broken. Reported by Kimiko. [SW]

Version 1.8.3 patchlevel 8                      Feb 26, 2009

Major changes:
 * @chan/mogrifier - Mogrify (mangle) any and all aspects of @channel
   chatter. e.g: make <Public> into [cilbuP]. [GM]

Minor changes:
 * The restart script appends a timestamp to the backups of
   existing databases and log files that it makes. Suggested
   by Ray,
 * @setting a flag that's already set will say so. Suggested by
   Kimiko, patch by Talvo.
 * Added 'magic sort': Sorts strings with embedded numbers and
   dbrefs.
 * Controlling whether info_slave is used or not moved into configure
   from options.h. (--enable-info_slave/--disable-info_slave). [SW]
 * Experimental change to attribute lookup to reduce the number of
   expensive string comparisions needed. [SW]
 * Updated the Mersenne Twister PRNG to a newer version (Look up
   SFMT for details). [SW]
 * New configure options --enable-sse2, --enable-sse2 and
   --enable-altivec. Currently only used in a few spots, including
   the new version of the PRNG. [SW]
 * Remove the MALLOC_PACKAGE option and csrimalloc, the only remaining
   non-system malloc() choice for it. csrimalloc didn't compile any more
   and there are better memory debugging tools available these days (The
   rational for keeping it when other malloc packages were removed.) [SW]