@@ -50,6 +50,7 @@ Fixes:
   * member() now ignores ANSI in matches. Reported by Minion. [MG]
   * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]
   * hidden() now works on descriptors as advertised. Reported by Teal. [MG]
+  * @name could cause a crash. Fixed. [GM]
 
 Version 1.8.3 patchlevel 9                      Feb 28, 2009
 
